<?xml version="1.0" encoding="UTF-8"?>
<!-- SPDX-FileCopyrightText: Estonian Information System Authority -->
<!-- SPDX-License-Identifier: MIT -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.14</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>eu.webeid.example</groupId>
	<artifactId>web-eid-springboot-example</artifactId>
	<version>3.2.2</version>
	<name>web-eid-springboot-example</name>
	<description>Example Spring Boot application that demonstrates how to use Web eID for authentication and digital
		signing
	</description>

	<properties>
		<java.version>17</java.version>
		<maven-surefire-plugin.version>3.5.3</maven-surefire-plugin.version>
		<webeid.version>3.2.1</webeid.version>
		<digidoc4j.version>6.1.1</digidoc4j.version>
		<jmockit.version>1.44</jmockit.version> <!-- Keep version 1.44, otherwise mocking will fail. -->
		<jib.version>3.5.1</jib.version>

        <!-- Remove in next spring-boot version when tomcat is >= 10.1.55: CVE-2026-4193, CVE-2026-4512, CVE-2026-4315 -->
        <tomcat.version>10.1.55</tomcat.version>
    </properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-thymeleaf</artifactId>
		</dependency>

		<dependency>
			<groupId>org.digidoc4j</groupId>
			<artifactId>digidoc4j</artifactId>
			<version>${digidoc4j.version}</version>
		</dependency>
<!--
        To use your locally built version of the authtoken-validation library instead of the published release:
        1. in parent dir change the version of authtoken-validation in pom.xml to next SNAPSHOT:
           for example 3.1.1 -> 3.1.2-SNAPSHOT
        2. Execute mvn clean install
        3. Verify that latest build date is recent, in ~/.m2/repository/eu/webeid/security/authtoken-validation/3.1.2-SNAPSHOT/
        4. Change the properties webeid.version to 3.1.2-SNAPSHOT
        5. After each change in authtoken-validation, you need to run mvn clean install
-->
		<dependency>
			<groupId>eu.webeid.security</groupId>
			<artifactId>authtoken-validation</artifactId>
			<version>${webeid.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.jmockit</groupId>
			<artifactId>jmockit</artifactId>
			<version>${jmockit.version}</version>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven-surefire-plugin.version}</version>
				<configuration>
					<argLine>
						-javaagent:${settings.localRepository}/org/jmockit/jmockit/${jmockit.version}/jmockit-${jmockit.version}.jar
					</argLine>
					<disableXmlReport>true</disableXmlReport>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.google.cloud.tools</groupId>
				<artifactId>jib-maven-plugin</artifactId>
				<version>${jib.version}</version>
				<configuration>
					<from>
						<image>eclipse-temurin:${java.version}-jre-jammy</image>
					</from>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>dev</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				<spring.profiles.active>dev</spring.profiles.active>
			</properties>
		</profile>
		<profile>
			<id>prod</id>
			<properties>
				<spring.profiles.active>prod</spring.profiles.active>
			</properties>
		</profile>
	</profiles>

	<repositories>
		<repository>
			<id>gitlab</id>
			<url>https://gitlab.com/api/v4/projects/19948337/packages/maven</url>
			<!-- GitHub Packages does not currently support public access, so disabled until it does.
			     See https://github.com/orgs/community/discussions/26634
			<id>github</id>
			<url>https://maven.pkg.github.com/web-eid/web-eid-authtoken-validation-java</url>
			-->
		</repository>
	</repositories>

</project>
